Fix SVG height on mobile. Fix false branch layout of For and While

--- a/demo/src/main/public/flowrun.css
+++ b/demo/src/main/public/flowrun.css
@@ -157,7 +157,6 @@ input[type="text"].flowrun--disabled {
 
 .flowrun-draw svg {
     width: 100%;
-    max-height: 100%;
 }
 
 /* debug variables */
@@ -407,6 +406,13 @@ pre[class*=language-].flowrun-code {
     background: var(--flowrun-blue-darker);
 }
 
+
+
+@media screen and (max-width: 600px) {
+    .flowrun-draw svg {
+        height: 100%;
+    }    
+}
 
 @media screen and (min-width: 600px) and (orientation: landscape) {
 
